link de menu arreglado en vista genes, help, home e indices + vista de usuario agregada

--- a/ProyectoPINGESO-web/src/main/webapp/menuUser.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/menuUser.xhtml
@@ -36,8 +36,8 @@
                         </p:menu>
                     </p:layoutUnit>
 
-                    <p:layoutUnit position="center" header="Welcome 'User'">
-                        Informacion de GO
+                    <p:layoutUnit position="center" header="How to Use GQI">
+                        User
 
                     </p:layoutUnit>
 
@@ -51,3 +51,4 @@
         </h:body>
     </f:view>
 </html>
+
