--- a/ProyectoPINGESO-web/src/main/webapp/welcomePrimefaces.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/welcomePrimefaces.xhtml
@@ -39,6 +39,13 @@
                 </p:layoutUnit>
 
                 <p:layoutUnit position="center">
+                    <h3>Not Responsive</h3>
+                    <div class="ui-grid">
+                        <div class="ui-grid-row">
+                            <div class="ui-grid-col-6">6</div>
+                            <div class="ui-grid-col-6">6</div>
+                        </div>
+                    </div>    
                     Welcome to PrimeFaces
                 </p:layoutUnit>
 
