--- a/ProyectoPINGESO-web/src/main/webapp/menuIndices.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/menuIndices.xhtml
@@ -46,12 +46,23 @@
                     </p:layoutUnit>
 
 
-                    <p:layoutUnit position="west" style="max-width: 250px" header="Menu" >
-                        <p:menu style="width: 230px">
+                    <p:layoutUnit position="west" style="min-width: 300px" header="Menu" >
+                        <p:menu toggleable="true" style="width: 285px">
                             <p:menuitem  icon="ui-icon-home" value="Home" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                            <p:menuitem  icon="ui-icon-calculator" value="GO biological indece" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuIndices.xhtml" />
-                            <p:menuitem  icon="ui-icon-clipboard" value="Genes" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuGenes.xhtml" />
-                            <p:menuitem  icon="ui-icon-help" value="How to use" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHelp.xhtml"/>
+                            <p:submenu  label="GO biological indece">
+                                <p:menuitem disabled="false" value="TBK" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="false" value="GS2" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="false" value="Wu-Palmer" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="Lin" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="Leacock-Chodorow" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="Resnik" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="Jiang-Conrath" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                            </p:submenu>
+                            <p:separator/>
+                        </p:menu>
+                        <p:menu toggleable="true" style="width: 285px">
+                            <p:menuitem  icon="ui-icon-clipboard" value="Genes" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuGenes.xhtml" ></p:menuitem>
+                            <p:menuitem  icon="ui-icon-help" value="How to use" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHelp.xhtml"></p:menuitem>
                         </p:menu>
                     </p:layoutUnit>
 
