--- a/ProyectoPINGESO-web/src/main/webapp/menuIndices.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/menuIndices.xhtml
@@ -50,9 +50,9 @@
                         <p:menu toggleable="true" style="width: 285px">
                             <p:menuitem  icon="ui-icon-home" value="Home" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
                             <p:submenu  label="GO biological indece">
-                                <p:menuitem disabled="false" value="TBK" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                                <p:menuitem disabled="false" value="GS2" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                                <p:menuitem disabled="false" value="Wu-Palmer" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="false" value="TBK" url="http://localhost:8080/ProyectoPINGESO-web/faces/TBK.xhtml" />
+                                <p:menuitem disabled="true" value="GS2" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="false" value="Wu-Palmer" url="http://localhost:8080/ProyectoPINGESO-web/faces/WuPalmer.xhtml" />
                                 <p:menuitem disabled="true" value="Lin" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
                                 <p:menuitem disabled="true" value="Leacock-Chodorow" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
                                 <p:menuitem disabled="true" value="Resnik" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
