--- a/ProyectoPINGESO-web/src/main/webapp/TBK.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/TBK.xhtml
@@ -49,7 +49,10 @@
                     <p:layoutUnit position="west" style="min-width: 300px" header="Menu" >
                         <p:menu toggleable="true" style="width: 285px">
                             <p:menuitem  icon="ui-icon-home" value="Home" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                            <p:submenu  label="GO biological indece">
+                            <p:menuitem  icon="ui-icon-clipboard" value="Genes" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuGenes.xhtml" ></p:menuitem>
+                            <p:menuitem  icon="ui-icon-help" value="How to use" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHelp.xhtml"></p:menuitem>
+
+                            <p:submenu  transient="false" label="GO biological indices">
                                 <p:menuitem disabled="false" value="TBK" url="http://localhost:8080/ProyectoPINGESO-web/faces/TBK.xhtml" />
                                 <p:menuitem disabled="true" value="GS2" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
                                 <p:menuitem disabled="false" value="Wu-Palmer" url="http://localhost:8080/ProyectoPINGESO-web/faces/WuPalmer.xhtml" />
@@ -58,29 +61,32 @@
                                 <p:menuitem disabled="true" value="Resnik" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
                                 <p:menuitem disabled="true" value="Jiang-Conrath" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
                             </p:submenu>
-                            <p:separator/>
                         </p:menu>
-                        <p:menu toggleable="true" style="width: 285px">
-                            <p:menuitem  icon="ui-icon-clipboard" value="Genes" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuGenes.xhtml" ></p:menuitem>
-                            <p:menuitem  icon="ui-icon-help" value="How to use" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHelp.xhtml"></p:menuitem>
-                        </p:menu>
+
                     </p:layoutUnit>
 
                     <p:layoutUnit position="center" header="Welcome 'User'">
                         <h3>T.B.K</h3>
                         <h:form>
-                            <h:outputText value="D1: "/>
-                            <h:inputText value="#{tBKMB.d1}"></h:inputText><br/>
-                            <h:outputText value="D2: "/>
-                            <h:inputText value="#{tBKMB.d2}"></h:inputText><br/>
-                            <h:outputText value="D3: "/>
-                            <h:inputText value="#{tBKMB.d3}"></h:inputText><br/>
-                            <h:outputText value="Lambda: "/>
-                            <h:inputText value="#{tBKMB.lambda}"></h:inputText><br/>
-                            <h:outputText value="Output: " />
-                            <h:inputText id="resultado" value="#{tBKMB.tbk}"/>
+                            <p:panelGrid columns="2">
+                                <h:outputText value="D1: "/>
+                                <h:inputText value="#{tBKMB.d1}"></h:inputText>
+                                <h:outputText value="D2: "/>
+                                <h:inputText value="#{tBKMB.d2}"></h:inputText>
+                                <h:outputText value="D3: "/>
+                                <h:inputText value="#{tBKMB.d3}"></h:inputText>
+                                <h:outputText value="Lambda: "/>
+                                <h:inputText value="#{tBKMB.lambda}"></h:inputText>
+                                
+                            </p:panelGrid>
+                                <p:commandButton value="Calculate T.B.K"  actionListener="#{tBKMB.func_tbk()}" update="resultado" />
 
-                            <p:commandButton value="Calculate T.B.K"  actionListener="#{tBKMB.func_tbk()}" update="resultado" />
+                            <p:panelGrid columns="2">
+
+                                <h:outputText value="Output:           " />
+                                <h:inputText id="resultado" value="#{tBKMB.tbk}"/>
+                            </p:panelGrid>
+
                         </h:form>
                     </p:layoutUnit>
 
@@ -93,19 +99,13 @@
                                             <div class="ui-grid-col-6">
                                                 <p:graphicImage value="Recursos/appsolution.png" width="200" height="50" style="margin-left: 20px"/>
                                             </div>
-                                            <div class="ui-grid-col-10">
-                                                <p:outputLabel value="Contact:" style="color: #1f61b2"/>
-                                                <br/>
-                                                <p:outputLabel value="- E-mail: appsolutions@gmail.com" style="color: #1f61b2;margin-left: 15px"/>
-                                                <br/>
-                                                <p:outputLabel value="- Phone: 09-78095193" style="color: #1f61b2;margin-left: 15px"/>
-                                            </div>
+                                            
                                         </div>
                                     </p:panel>
                                 </div>
 
                                 <div class="ui-grid-col-10">
-                                    <p:panel style="background: #1f61b2; min-height: 80px">
+                                    <p:panel style="background: #1f61b2; max-height: 80px">
                                         <div class="ui-grid-row">
                                             <div class="ui-grid-col-10">
                                                 <p:outputLabel value=" Go to:" style="color: #fdb146"/>
