--- a/ProyectoPINGESO-web/src/main/webapp/menuUser.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/menuUser.xhtml
@@ -27,14 +27,23 @@
                     </p:layoutUnit>
 
 
-                    <p:layoutUnit position="west" style="max-width: 250px" header="Menú" >
-                        <p:menu>
+                    <p:layoutUnit position="west" style="min-width: 300px" header="Menu" >
+                        <p:menu toggleable="true" style="width: 285px">
                             <p:menuitem  icon="ui-icon-home" value="Home" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                            <p:menuitem  icon="ui-icon-calculator" value="GO biological indeces" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuIndices.xhtml" />
-                            <p:menuitem  icon="ui-icon-person" value="Users" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuUser.xhtml" />
-                            <p:menuitem  icon="ui-icon-clipboard" value="Genes" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuGenes.xhtml" />
-                            <p:menuitem  icon="ui-icon-help" value="How to use" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHelp.xhtml"/>
+                            <p:menuitem  icon="ui-icon-clipboard" value="Genes" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuGenes.xhtml" ></p:menuitem>
+                            <p:menuitem  icon="ui-icon-help" value="How to use" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHelp.xhtml"></p:menuitem>
+                        
+                            <p:submenu  transient="false" label="GO biological indices">
+                                <p:menuitem disabled="false" value="TBK" url="http://localhost:8080/ProyectoPINGESO-web/faces/TBK.xhtml" />
+                                <p:menuitem disabled="true" value="GS2" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="false" value="Wu-Palmer" url="http://localhost:8080/ProyectoPINGESO-web/faces/WuPalmer.xhtml" />
+                                <p:menuitem disabled="true" value="Lin" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="Leacock-Chodorow" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="Resnik" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="Jiang-Conrath" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                            </p:submenu>
                         </p:menu>
+                       
                     </p:layoutUnit>
 
                     <p:layoutUnit position="center" header="How to Use GQI">
