--- a/ProyectoPINGESO-web/src/main/webapp/readinput.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/readinput.xhtml
@@ -1,17 +1,122 @@
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Journaldev Tutorial</title>
-    </h:head>
-    <h:body>
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-        <h:form enctype="multipart/form-data" style="width:500px">
-                <p:growl id="msg"></p:growl>
-                <p:fileUpload value="#{fileUploadManagedBean.file}" mode="advanced"
-                                fileUploadListener="#{fileUploadManagedBean.fileUploadListener}" update="msg"></p:fileUpload>
-        </h:form>
-    </h:body>
+
+
+    <f:view contentType="text/html">
+        <h:head>
+            <title>Home</title>
+        </h:head>
+
+        <h:body>
+            <h:form> 
+                <p:layout fullPage="true">
+                    <p:layoutUnit position="north"  style="min-height: 102px; min-width: 700px" >
+                        <div class="ui-grid">
+                            <div class="ui-grid-row">
+                                <div class="ui-grid-col-4">
+                                    <p:panel style="background: #fdb146; min-height: 80px">
+                                        <div class="ui-grid-row">
+                                            <div class="ui-grid-col">
+                                                <p:graphicImage value="Recursos/GO.png" width="30" height="30" style="margin-left: 20px"/>
+                                                <p:outputLabel value="Based on Gene Ontology" style="color: #1f61b2;margin-left: 15px"/>
+                                            </div>
+                                        </div>
+                                    </p:panel>
+                                </div>
+
+                                <div class="ui-grid-col-10">
+                                    <p:panel style="background: #1f61b2; min-height: 80px">
+                                        <div class="ui-grid-row">
+                                            <div class="ui-grid-col-10">
+                                                <p:graphicImage value="Recursos/titulo.png" width="400"  style="margin-top: 10px;margin-left: 20px"/>
+                                            </div>
+                                            <div class="ui-grid-col-2">
+                                                <p:graphicImage value="Recursos/adn.png" width="70" height="55" style="margin-left: 50px"/>
+                                            </div>
+                                        </div>
+                                    </p:panel>
+                                </div>
+                            </div>
+                        </div> 
+                    </p:layoutUnit>
+
+
+                    <p:layoutUnit position="west" style="min-width: 300px" header="Menu" >
+                        <p:menu toggleable="true" style="width: 285px">
+                            <p:menuitem  icon="ui-icon-home" value="Home" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                            <p:menuitem  icon="ui-icon-clipboard" value="Genes" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuGenes.xhtml" ></p:menuitem>
+                            <p:menuitem  icon="ui-icon-help" value="How to use" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHelp.xhtml"></p:menuitem>
+
+                            <p:submenu  transient="false" label="GO biological indices">
+                                <p:menuitem disabled="false" value="Upload" url="http://localhost:8080/ProyectoPINGESO-web/faces/readinput.xhtml" />
+                                <p:menuitem disabled="false" value="TBK" url="http://localhost:8080/ProyectoPINGESO-web/faces/TBK.xhtml" />
+                                <p:menuitem disabled="true" value="GS2" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="false" value="Wu-Palmer" url="http://localhost:8080/ProyectoPINGESO-web/faces/WuPalmer.xhtml" />
+                                <p:menuitem disabled="true" value="Lin" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="Leacock-Chodorow" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="Resnik" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="Jiang-Conrath" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                            </p:submenu>
+                        </p:menu>
+
+                    </p:layoutUnit>
+
+                    <p:layoutUnit position="center" header="Welcome 'User'">
+                        <h:form enctype="multipart/form-data" style="width:500px">
+                            <p:growl id="msg"></p:growl>
+                            <p:fileUpload value="#{fileUploadManagedBean.file}" mode="advanced"
+                                          fileUploadListener="#{fileUploadManagedBean.fileUploadListener}" update="msg"></p:fileUpload>
+                        </h:form>
+
+                    </p:layoutUnit>
+
+                    <p:layoutUnit position="south"  style="min-height: 100px; min-width: 700px" >
+                        <div class="ui-grid">
+                            <div class="ui-grid-row">
+                                <div class="ui-grid-col-8">
+                                    <p:panel style="background: #fdb146; min-height: 80px">
+                                        <div class="ui-grid-row">
+                                            <div class="ui-grid-col-6">
+                                                <p:graphicImage value="Recursos/appsolution.png" width="200" height="50" style="margin-left: 20px"/>
+                                            </div>
+                                            <div class="ui-grid-col-10">
+                                                <p:outputLabel value="Contact:" style="color: #1f61b2"/>
+                                                <br/>
+                                                <p:outputLabel value="- E-mail: appsolutions@gmail.com" style="color: #1f61b2;margin-left: 15px"/>
+                                                <br/>
+                                                <p:outputLabel value="- Phone: 09-78095193" style="color: #1f61b2;margin-left: 15px"/>
+                                            </div>
+                                        </div>
+                                    </p:panel>
+                                </div>
+
+                                <div class="ui-grid-col-10">
+                                    <p:panel style="background: #1f61b2; max-height: 80px">
+                                        <div class="ui-grid-row">
+                                            <div class="ui-grid-col-10">
+                                                <p:outputLabel value=" Go to:" style="color: #fdb146"/>
+                                                <br/>
+                                                <p:link value="- University of Santiago of Chile" href="http://www.usach.cl" style="color: #fdb146; margin-left: 15px"/>
+                                                <br/>
+                                                <p:link value="- Department of Computer Engineering" href="http://www.informatica.usach.cl" style="color: #fdb146; margin-left: 15px"/>
+                                            </div>
+                                            <div class="ui-grid-col-8">
+                                                <p:graphicImage value="Recursos/logoUsach2.png" width="250" height="80" style="margin-left: 10px"/>
+                                            </div>
+                                        </div>
+                                    </p:panel>
+                                </div>
+                            </div>
+                        </div>    
+                    </p:layoutUnit>
+                </p:layout>
+            </h:form> 
+        </h:body>
+    </f:view>
 </html>
+
