Menu modificado con subMenu para los Indices

--- a/ProyectoPINGESO-web/src/main/webapp/readinput.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/readinput.xhtml
@@ -66,7 +66,7 @@
 
                     </p:layoutUnit>
 
-                    <p:layoutUnit position="center" header="Welcome 'User'">
+                    <p:layoutUnit position="center" header="Upload">
                         <h:form enctype="multipart/form-data" style="width:500px">
                             <p:growl id="msg"></p:growl>
                             <p:fileUpload value="#{fileUploadManagedBean.file}" mode="advanced"
@@ -84,13 +84,7 @@
                                             <div class="ui-grid-col-6">
                                                 <p:graphicImage value="Recursos/appsolution.png" width="200" height="50" style="margin-left: 20px"/>
                                             </div>
-                                            <div class="ui-grid-col-10">
-                                                <p:outputLabel value="Contact:" style="color: #1f61b2"/>
-                                                <br/>
-                                                <p:outputLabel value="- E-mail: appsolutions@gmail.com" style="color: #1f61b2;margin-left: 15px"/>
-                                                <br/>
-                                                <p:outputLabel value="- Phone: 09-78095193" style="color: #1f61b2;margin-left: 15px"/>
-                                            </div>
+                                            
                                         </div>
                                     </p:panel>
                                 </div>
