--- a/ProyectoPINGESO-web/src/main/webapp/menuHelp.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/menuHelp.xhtml
@@ -53,6 +53,7 @@
                             <p:menuitem  icon="ui-icon-help" value="How to use" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHelp.xhtml"></p:menuitem>
                         
                             <p:submenu  transient="false" label="GO biological indices">
+                                <p:menuitem disabled="false" value="Upload" url="http://localhost:8080/ProyectoPINGESO-web/faces/readinput.xhtml" />
                                 <p:menuitem disabled="false" value="TBK" url="http://localhost:8080/ProyectoPINGESO-web/faces/TBK.xhtml" />
                                 <p:menuitem disabled="true" value="GS2" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
                                 <p:menuitem disabled="false" value="Wu-Palmer" url="http://localhost:8080/ProyectoPINGESO-web/faces/WuPalmer.xhtml" />
@@ -78,13 +79,6 @@
                                         <div class="ui-grid-row">
                                             <div class="ui-grid-col-6">
                                                 <p:graphicImage value="Recursos/appsolution.png" width="200" height="50" style="margin-left: 20px"/>
-                                            </div>
-                                            <div class="ui-grid-col-10">
-                                                <p:outputLabel value="Contact:" style="color: #1f61b2"/>
-                                                <br/>
-                                                <p:outputLabel value="- E-mail: appsolutions@gmail.com" style="color: #1f61b2;margin-left: 15px"/>
-                                                <br/>
-                                                <p:outputLabel value="- Phone: 09-78095193" style="color: #1f61b2;margin-left: 15px"/>
                                             </div>
                                         </div>
                                     </p:panel>
