Menu modificado con subMenu para los Indices

--- a/ProyectoPINGESO-web/src/main/webapp/menuIndices.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/menuIndices.xhtml
@@ -171,21 +171,22 @@
                                     <p:panel style="background: #fdb146; min-height: 80px">
                                         <div class="ui-grid-row">
                                             <div class="ui-grid-col-6">
-                                                <p:graphicImage value="Recursos/appsolution.png" width="200" height="50" style=""/>
+                                                <p:graphicImage value="Recursos/appsolution.png" width="200" height="50" style="margin-left: 20px"/>
                                             </div>
+                                            
                                         </div>
                                     </p:panel>
                                 </div>
 
                                 <div class="ui-grid-col-10">
-                                    <p:panel style="background: #1f61b2; max-height: 80px">
+                                    <p:panel style="background: #1f61b2; min-height: 80px">
                                         <div class="ui-grid-row">
                                             <div class="ui-grid-col-10">
                                                 <p:outputLabel value=" Go to:" style="color: #fdb146"/>
                                                 <br/>
-                                                <p:link value="- University of Santiago of Chile" href="http://www.usach.cl" style="color: #fdb146; margin-left: 15px"/>
+                                                <p:link value="- University of Santiago of Chile" href="http://www.usach.cl" target="_blank" style="color: #fdb146; margin-left: 15px"/>
                                                 <br/>
-                                                <p:link value="- Department of Computer Engineering" href="http://www.informatica.usach.cl" style="color: #fdb146; margin-left: 15px"/>
+                                                <p:link value="- Department of Computer Engineering" href="http://www.informatica.usach.cl" target="_blank" style="color: #fdb146; margin-left: 15px"/>
                                             </div>
                                             <div class="ui-grid-col-8">
                                                 <p:graphicImage value="Recursos/logoUsach2.png" width="250" height="50" style="margin-left: 10px"/>
