--- a/ProyectoPINGESO-web/src/main/webapp/menuHome.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/menuHome.xhtml
@@ -51,23 +51,42 @@
                             <p:menuitem  icon="ui-icon-home" value="Home" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
                             <p:menuitem  icon="ui-icon-clipboard" value="Genes" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuGenes.xhtml" ></p:menuitem>
                             <p:menuitem  icon="ui-icon-help" value="How to use" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHelp.xhtml"></p:menuitem>
-                        
+
                             <p:submenu  transient="false" label="GO biological indices">
-                                <p:menuitem disabled="false" value="Upload" url="http://localhost:8080/ProyectoPINGESO-web/faces/readinput.xhtml" />
-                                <p:menuitem disabled="false" value="TBK" url="http://localhost:8080/ProyectoPINGESO-web/faces/TBK.xhtml" />
-                                <p:menuitem disabled="true" value="GS2" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                                <p:menuitem disabled="false" value="Wu-Palmer" url="http://localhost:8080/ProyectoPINGESO-web/faces/WuPalmer.xhtml" />
-                                <p:menuitem disabled="true" value="Lin" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                                <p:menuitem disabled="true" value="Leacock-Chodorow" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                                <p:menuitem disabled="true" value="Resnik" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
-                                <p:menuitem disabled="true" value="Jiang-Conrath" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem ajax="true" disabled="false" value="-    Upload" url="http://localhost:8080/ProyectoPINGESO-web/faces/readinput.xhtml" />
+                                <p:menuitem disabled="false" value="- TBK" url="http://localhost:8080/ProyectoPINGESO-web/faces/TBK.xhtml" />
+                                <p:menuitem disabled="true" value="- GS2" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="false" value="- Wu-Palmer" url="http://localhost:8080/ProyectoPINGESO-web/faces/WuPalmer.xhtml" />
+                                <p:menuitem disabled="true" value="- Lin" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="- Leacock-Chodorow" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="- Resnik" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
+                                <p:menuitem disabled="true" value="- Jiang-Conrath" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
                             </p:submenu>
                         </p:menu>
-                       
+
                     </p:layoutUnit>
 
                     <p:layoutUnit position="center" header="Home">
-                        Informacion de GO
+                        <p:carousel numVisible="1" itemStyle="height:390px;width:1175px;" 
+                                    autoPlayInterval="7000" effect="easeInStrong" headerText="Information" style="margin-bottom:0;background: lavender" circular="true">
+                            <p:tab>
+                                <h:panelGrid columns="2" >
+                                    <p:outputLabel value="The “Quality Indices Generator” application is a project carried out by a team of students of Computer Engineering at the “Universidad de Santiago de Chile”. 
+                                                   The system aims to facilitate research through the use of indices designed for calculations in bioinformatics, where the user can input a list of genes and get the result of various indices for genetic analysis
+                                                   , through genetic data obtained by GeneOntology, the calculation of indices such as GS2, WuPalmer, TBK, among others. 
+                                                   The system is open to the entire scientific community."/>
+                                </h:panelGrid>
+                            </p:tab>
+                            <p:tab>
+                                <p:graphicImage alt="CytoScape EM" value="Recursos/img1.png" width="1170px" height="350px"/>
+                                <p:link value="Enrichment Map Cytoscape Plugin" href="http://geneontology.org/article/enrichmentmap-cytoscape" target="_blank" style="color: #fdb146; margin-left: 15px"/>
+                            </p:tab>
+                            <p:tab>
+                                <p:graphicImage  alt="S. aureus Term Enrichment" value="Recursos/img2.jpg" width="1170px" height="350px"/>
+                                <p:link value="Wisdom of Crowds for Robust Gene Network Inference" href="http://geneontology.org/article/wisdom-crowds-robust-gene-network-inference" target="_blank" style="color: #fdb146; margin-left: 15px"/>
+                            </p:tab>
+                        </p:carousel>
+
 
                     </p:layoutUnit>
 
@@ -80,6 +99,7 @@
                                             <div class="ui-grid-col-6">
                                                 <p:graphicImage value="Recursos/appsolution.png" width="200" height="50" style="margin-left: 20px"/>
                                             </div>
+
                                         </div>
                                     </p:panel>
                                 </div>
@@ -90,12 +110,12 @@
                                             <div class="ui-grid-col-10">
                                                 <p:outputLabel value=" Go to:" style="color: #fdb146"/>
                                                 <br/>
-                                                <p:link value="- University of Santiago of Chile" href="http://www.usach.cl" style="color: #fdb146; margin-left: 15px"/>
+                                                <p:link value="- University of Santiago of Chile" href="http://www.usach.cl" target="_blank" style="color: #fdb146; margin-left: 15px"/>
                                                 <br/>
-                                                <p:link value="- Department of Computer Engineering" href="http://www.informatica.usach.cl" style="color: #fdb146; margin-left: 15px"/>
+                                                <p:link value="- Department of Computer Engineering" href="http://www.informatica.usach.cl" target="_blank" style="color: #fdb146; margin-left: 15px"/>
                                             </div>
                                             <div class="ui-grid-col-8">
-                                                <p:graphicImage value="Recursos/logoUsach2.png" width="250" height="80" style="margin-left: 10px"/>
+                                                <p:graphicImage value="Recursos/logoUsach2.png" width="250" height="50" style="margin-left: 10px"/>
                                             </div>
                                         </div>
                                     </p:panel>
