--- a/ProyectoPINGESO-web/src/main/webapp/menuUser.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/menuUser.xhtml
@@ -32,7 +32,7 @@
                             <p:menuitem  icon="ui-icon-home" value="Home" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
                             <p:menuitem  icon="ui-icon-clipboard" value="Genes" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuGenes.xhtml" ></p:menuitem>
                             <p:menuitem  icon="ui-icon-help" value="How to use" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHelp.xhtml"></p:menuitem>
-                        
+
                             <p:submenu  transient="false" label="GO biological indices">
                                 <p:menuitem disabled="false" value="TBK" url="http://localhost:8080/ProyectoPINGESO-web/faces/TBK.xhtml" />
                                 <p:menuitem disabled="true" value="GS2" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
@@ -43,11 +43,60 @@
                                 <p:menuitem disabled="true" value="Jiang-Conrath" url="http://localhost:8080/ProyectoPINGESO-web/faces/menuHome.xhtml" />
                             </p:submenu>
                         </p:menu>
-                       
+
                     </p:layoutUnit>
 
                     <p:layoutUnit position="center" header="How to Use GQI">
-                        User
+                        <div id="header">
+                            <p>
+                                This is an example of <em>rcarousel</em> – a jQuery UI continuous carousel.
+                                Go back to the <a href="http://ryrych.github.com/rcarousel/">documentation</a>
+                            </p>
+                        </div>
+
+                        <div id="content">
+                            <h1>carousel with margin between elements</h1>
+
+                            <div id="container">
+                                <div id="carousel">
+                                    <img src="images/001.jpg" />
+                                    <img src="images/002.jpg" />
+                                    <img src="images/003.jpg" />
+                                    <img src="images/004.jpg" />
+                                    <img src="images/005.jpg" />
+                                    <img src="images/006.jpg" />
+                                    <img src="images/007.jpg" />
+                                    <img src="images/008.jpg" />
+                                    <img src="images/009.jpg" />
+                                    <img src="images/010.jpg" />
+                                </div>
+                                <a href="#" id="ui-carousel-next"><span>next</span></a>
+                                <a href="#" id="ui-carousel-prev"><span>prev</span></a>
+                            </div>
+                        </div>
+
+                        <script type="text/javascript" src="../widget/lib/jquery-1.7.1.js"></script>
+                        <script type="text/javascript" src="../widget/lib/jquery.ui.core.js"></script>
+                        <script type="text/javascript" src="../widget/lib/jquery.ui.widget.js"></script>
+                        <script type="text/javascript" src="../widget/lib/jquery.ui.rcarousel.js"></script>
+                        <script type="text/javascript">
+                            jQuery(function ($) {
+                                $("#carousel ").rcarousel({
+                                    margin: 10
+                                });
+
+                                $( "#ui-carousel-next")
+                                        .add("#ui-carousel-prev")
+                                        .hover(
+                                                function () {
+                                                    $(this).css( "opacity", 0.7);
+                                                },
+                                                function () {
+                                                    $(this).css( "opacity", 1.0);
+                                                }
+                                        );
+                            });
+                        </script>
 
                     </p:layoutUnit>
 
