Menu modificado con subMenu para los Indices

--- a/ProyectoPINGESO-web/src/main/webapp/menuHome.xhtml
+++ b/ProyectoPINGESO-web/src/main/webapp/menuHome.xhtml
@@ -68,7 +68,9 @@
 
                     <p:layoutUnit position="center" header="Home">
                         <p:carousel numVisible="1" itemStyle="height:390px;width:1175px;" 
-                                    autoPlayInterval="7000" effect="easeInStrong" headerText="Information" style="margin-bottom:0;background: lavender" circular="true">
+                                    autoPlayInterval="5000" effect="easeInStrong" 
+                                    headerText="Information" style="margin-bottom:0;background: lavender" 
+                                    circular="true">
                             <p:tab>
                                 <h:panelGrid columns="2" >
                                     <p:outputLabel value="The “Quality Indices Generator” application is a project carried out by a team of students of Computer Engineering at the “Universidad de Santiago de Chile”. 
